--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -245,8 +245,6 @@ jobs:
   windows:
     name: Windows
     runs-on: windows-latest
-    outputs:
-      artifact-id: ${{ steps.windows-build-upload.outputs.artifact-id }}
 
     defaults:
       run:
@@ -268,6 +266,7 @@ jobs:
             mingw-w64-x86_64-sdl3
             mingw-w64-x86_64-sdl3-image
             mingw-w64-x86_64-glew
+            mingw-w64-x86_64-mesa
 
       - name: Configure CMake
         working-directory: windows
@@ -277,16 +276,28 @@ jobs:
         working-directory: windows
         run: cmake --build build --config Release
 
-      - name: Upload Windows build artifacts
-        id: windows-build-upload
+      - name: Run UI tests
+        working-directory: windows
+        shell: pwsh
+        run: .\ui_test.ps1
+
+      - name: Upload screenshots
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: windows-build
-          path: |
-            windows/build/*.exe
-            windows/*.dll
-            windows/ui_test.ps1
+          name: windows-ui-test-screenshots
+          path: windows/screenshots/*.png
           if-no-files-found: error
+
+      - name: Upload ui test log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-ui-test-log
+          path: |
+            windows/acidwarp.log
+            windows/acidwarp-error.log
+          if-no-files-found: ignore
 
 
 
@@ -479,68 +490,12 @@ jobs:
 
 
   # ============================================================================
-  # WINDOWS UI TEST (GPU RUNNER)
-  #
-  # Note: Only runs if all other builds pass, to avoid wasted compute spend
-  # ============================================================================
-  windows-ui-test:
-    name: Windows UI Test
-    runs-on: windows-x64-2019-gpu
-    needs: [android, linux, windows, macos, ios]
-    if: success()
-    environment: gpu-testing
-
-    defaults:
-      run:
-        shell: powershell
-
-    steps:
-      - name: Download Windows build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-build
-
-      - name: Run UI tests
-        run: .\ui_test.ps1
-
-      - name: Upload screenshots
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-ui-test-screenshots
-          path: screenshots/*.png
-          if-no-files-found: error
-
-      - name: Upload ui test log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-ui-test-log
-          path: |
-            **/acidwarp.log
-            **/acidwarp-error.log
-          if-no-files-found: ignore
-
-      - name: Delete windows-build artifact
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.actions.deleteArtifact({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              artifact_id: ${{ needs.windows.outputs.artifact-id }}
-            });
-
-
-
-  # ============================================================================
   # BUILD SUMMARY
   # ============================================================================
   build-summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [android, linux, windows, macos, ios, windows-ui-test]
+    needs: [android, linux, windows, macos, ios]
     if: always()
 
     steps:
@@ -548,20 +503,18 @@ jobs:
         run: |
           echo "Build Summary:"
           echo "============================================"
-          echo "Android:         ${{ needs.android.result }}"
-          echo "Linux:           ${{ needs.linux.result }}"
-          echo "Windows:         ${{ needs.windows.result }}"
-          echo "macOS:           ${{ needs.macos.result }}"
-          echo "iOS:             ${{ needs.ios.result }}"
-          echo "Windows UI Test: ${{ needs.windows-ui-test.result }}"
+          echo "Android: ${{ needs.android.result }}"
+          echo "Linux:   ${{ needs.linux.result }}"
+          echo "Windows: ${{ needs.windows.result }}"
+          echo "macOS:   ${{ needs.macos.result }}"
+          echo "iOS:     ${{ needs.ios.result }}"
           echo "============================================"
 
           if [[ "${{ needs.android.result }}" == "failure" ]] || \
              [[ "${{ needs.linux.result }}" == "failure" ]] || \
              [[ "${{ needs.windows.result }}" == "failure" ]] || \
              [[ "${{ needs.macos.result }}" == "failure" ]] || \
-             [[ "${{ needs.ios.result }}" == "failure" ]] || \
-             [[ "${{ needs.windows-ui-test.result }}" == "failure" ]]; then
+             [[ "${{ needs.ios.result }}" == "failure" ]]; then
             echo "? One or more builds failed"
             exit 1
           else
