--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -561,7 +561,8 @@ jobs:
               if [ -f "$img" ]; then
                 filename=$(basename "$img")
                 echo "### $filename" >> comment.md
-                echo "![Android - $filename](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/android-ui-test-screenshots/$filename)" >> comment.md
+                base64_img=$(base64 -w 0 "$img")
+                echo "![Android - $filename](data:image/png;base64,$base64_img)" >> comment.md
                 echo "" >> comment.md
               fi
             done
@@ -584,7 +585,8 @@ jobs:
               if [ -f "$img" ]; then
                 filename=$(basename "$img")
                 echo "### $filename" >> comment.md
-                echo "![Linux - $filename](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/linux-ui-test-screenshots/$filename)" >> comment.md
+                base64_img=$(base64 -w 0 "$img")
+                echo "![Linux - $filename](data:image/png;base64,$base64_img)" >> comment.md
                 echo "" >> comment.md
               fi
             done
@@ -607,7 +609,8 @@ jobs:
               if [ -f "$img" ]; then
                 filename=$(basename "$img")
                 echo "### $filename" >> comment.md
-                echo "![Windows - $filename](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/windows-ui-test-screenshots/$filename)" >> comment.md
+                base64_img=$(base64 -w 0 "$img")
+                echo "![Windows - $filename](data:image/png;base64,$base64_img)" >> comment.md
                 echo "" >> comment.md
               fi
             done
@@ -630,7 +633,8 @@ jobs:
               if [ -f "$img" ]; then
                 filename=$(basename "$img")
                 echo "### $filename" >> comment.md
-                echo "![macOS - $filename](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/macos-ui-test-screenshots/$filename)" >> comment.md
+                base64_img=$(base64 -w 0 "$img")
+                echo "![macOS - $filename](data:image/png;base64,$base64_img)" >> comment.md
                 echo "" >> comment.md
               fi
             done
@@ -653,7 +657,8 @@ jobs:
               if [ -f "$img" ]; then
                 filename=$(basename "$img")
                 echo "### $filename" >> comment.md
-                echo "![iOS - $filename](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/ios-ui-test-screenshots/$filename)" >> comment.md
+                base64_img=$(base64 -w 0 "$img")
+                echo "![iOS - $filename](data:image/png;base64,$base64_img)" >> comment.md
                 echo "" >> comment.md
               fi
             done
@@ -669,7 +674,8 @@ jobs:
           *Automated screenshots from CI run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})*
           EOF
 
-          cat comment.md
+          # Don't print the full comment (it's huge with base64 images)
+          echo "Generated PR comment with embedded screenshots"
 
       - name: Post PR comment
         uses: actions/github-script@v7
